<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/main_hello"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            card_view:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background">

                <TextView
                    android:id="@+id/info_text_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/main_hello"
                    android:textColor="@color/white"
                    android:textSize="30sp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/main_shake"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@id/main_hello"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            card_view:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/info_text_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:gravity="left"
                    android:text="@string/main_shake"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/info_text_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="left"
                    android:text="@string/main_shake_description"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/main_app_sync"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@id/main_shake"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            card_view:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/info_text_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:gravity="left"
                    android:text="@string/main_app_sync"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/info_text_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="left"
                    android:text="@string/main_app_sync_description"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/main_setting_sync"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@id/main_app_sync"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            card_view:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/info_text_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:gravity="left"
                    android:text="@string/main_setting_sync"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/info_text_7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="left"
                    android:text="@string/main_setting_sync_description"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </RelativeLayout>
</ScrollView>