<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/slide_title"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:gravity="center"
        android:text="@string/slide_title"
        android:fontFamily="sans-serif-light"
        android:textSize="30dp" />

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/slide_brightness_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_below="@id/slide_title"
        card_view:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/slide_brightness_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/slide_brightness"
                android:fontFamily="sans-serif-light"
                android:textSize="20dp" />
            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                android:id="@+id/slide_brightness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dsb_allowTrackClickToDrag="false"
                app:dsb_indicatorTextAppearance="@style/CustomFloaterTextAppearance"
                app:dsb_indicatorElevation="2dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/slide_misc_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/slide_brightness_card"
        card_view:cardElevation="2dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/slide_wifi"
                    android:fontFamily="sans-serif-light"
                    android:textSize="20dp" />
                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/slide_wifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:gravity="center">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/slide_touches"
                    android:fontFamily="sans-serif-light"
                    android:textSize="20dp" />
                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/slide_touches"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>
            </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/slide_write_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/slide_misc_card"
        card_view:cardElevation="2dp">
        <ListView
            android:id="@+id/slide_list"
            android:layout_margin="20dp"
            android:dividerHeight="0dp"
            android:divider="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.CardView>
</RelativeLayout>